--- a/bugzilla/template/ko/default/index.html.tmpl
+++ b/bugzilla/template/ko/default/index.html.tmpl
@@ -29,9 +29,9 @@
 
 
 [% PROCESS global/header.html.tmpl
-   title = "$terms.Bugzilla Main Page"
-   header = "Main Page" 
-   header_addl_info = "version $constants.BUGZILLA_VERSION"
+   title = "$terms.Bugzilla 메인 페이지"
+   header = "메인 페이지" 
+   header_addl_info = "버전 $constants.BUGZILLA_VERSION"
    style_urls = [ 'skins/standard/index.css' ]
    onload = 'document.forms[\'f\'].quicksearch.focus();'
 %]
@@ -49,7 +49,7 @@ function addSidebar() {
   }
   else
   {
-    var rv = window.confirm ("Your browser does not support the sidebar extension.  " + "Would you like to upgrade now?");
+    var rv = window.confirm ("현재 브라우저에서 사이드바 확장을 지원하지 않습니다.  " + "업그레이드 하시겠습니까?");
     if (rv)
       document.location.href = "http://www.mozilla.org/";
   }
@@ -61,29 +61,30 @@ function addSidebar() {
   <div id="new_release">
     [% IF release.data %]
       [% IF release.deprecated %]
-        <p>[% terms.Bugzilla %] [%+ release.deprecated FILTER html %] is no longer
-        supported. You are highly encouraged to upgrade in order to keep your
-        system secure.</p>
+        <p>[% terms.Bugzilla %] [%+ release.deprecated FILTER html %] 가 더 이상
+	지원되지 않습니다. 시스템 보안을 유지하기 위해 업그레이드 하십시오.</p>
       [% END %]
 
-      <p>A new [% terms.Bugzilla %] version ([% release.data.latest_ver FILTER html %])
-      is available at
-      <a href="[% release.data.url FILTER html %]">[% release.data.url FILTER html %]</a>.<br>
-      Release date: [% release.data.date FILTER html %]</p>
+      <p>[% terms.Bugzilla %]의 최신 버전인 ([% release.data.latest_ver FILTER html %])은
+      <a href="[% release.data.url FILTER html %]">[% release.data.url FILTER html %]</a>
+      에서 받을 수 있습니다.<br>
+      게시 날짜: [% release.data.date FILTER html %]</p>
 
-      <p class="notice">This message is only shown to logged in users with admin privs.
-      You can configure this notification from the
-      <a href="editparams.cgi?section=core#upgrade_notification">Parameters</a> page.</p>
+      <p class="notice">이 메시지는 admin권한으로 로그인한 유저만 볼 수 있습니다.
+      이 공지는
+      <a href="editparams.cgi?section=core#upgrade_notification">Parameters</a> 페이지에서
+      설정하실 수 있습니다.</p>
     [% ELSIF release.error == "missing_package" %]
-      <p>Missing package '[% release.package FILTER html %]'. This package is required to
-      <a href="editparams.cgi?section=core#upgrade_notification">notify you about new releases</a>.</p>
+      <p>패키지 '[% release.package FILTER html %]'가 없습니다. 이 패키지는
+      <a href="editparams.cgi?section=core#upgrade_notification">새로 릴리즈된 것을 알려주는데</a>
+      필요합니다.</p>
     [% ELSIF release.error == "cannot_download" %]
-      <p>The local XML file '[% release.xml_file FILTER html %]' cannot be created.
-      Please make sure the web server can write in this directory and that you can access
-      the web. If you are behind a proxy, set the
-      <a href="editparams.cgi?section=core#proxy_url">proxy_url</a> parameter correctly.</p>
+      <p>해당 XML 파일 '[% release.xml_file FILTER html %]'을 생성할 수 없습니다.
+      웹에 접속할 수 있는지, 그리고 웹 서버가 현재 디렉토리에 쓸 수 있는지 확인해 보십시오.
+      프록시가 (behind proxy) 면, <a href="editparams.cgi?section=core#proxy_url">프록시 url</a>
+      의 매개변수를 정확히 설정하십시오.</p>
     [% ELSIF release.error == "no_update" %]
-      <p>The local XML file '[% release.xml_file FILTER html %]' cannot be updated.
+      <p>현재 XML 파일 '[% release.xml_file FILTER html %]' cannot be updated.
       Please make sure the web server can edit this file.</p>
     [% ELSIF release.error == "no_access" %]
       <p>The local XML file '[% release.xml_file FILTER html %]' cannot be read.
