--- a/bugzilla/template/ko/default/index.html.tmpl
+++ b/bugzilla/template/ko/default/index.html.tmpl
@@ -144,7 +144,7 @@ function addSidebar() {
 
   <form id="f" name="f" action="buglist.cgi" method="get"
         onsubmit="if (this.quicksearch.value == '')
-                  { alert('Please enter one or more search terms first.');
+                  { alert('먼저 하나 이상의 검색어를 입력하십시오.');
                     return false; } return true;">
   <div>
     <p>Enter [% terms.abug %] # or some search terms:</p>
