--- a/trunk/bugzilla/template/ko/default/welcome-admin.html.tmpl
+++ b/trunk/bugzilla/template/ko/default/welcome-admin.html.tmpl
@@ -28,36 +28,34 @@
 %]
 
 <div id="welcome-admin">
-  <p>Welcome, [% user.identity FILTER html %].</p>
+  <p>[% user.identity FILTER html %]님, 환영합니다.</p>
 
-  <p>You are seeing this page because some of the core parameters have not been set up yet.
-  The goal of this page is to inform you about the last steps required to set up
-  your installation correctly.</p>
+  <p>이 페이지는 아직 핵심 매개변수들이 설정되지 않았을 때 출력됩니다.
+  이 페이지의 목적은 설치를 올바르게 마치기 위한 마지막 단계들을 알려주는 데 있습니다.</p>
 
-  <p>As an administrator, several administrative links are available at the bottom of
-  this page. These links will always be visible, on all pages. Among these links,
-  you must visit at least the <a href="editparams.cgi">Parameters</a> one,
-  which is the page from where you can set all important parameters for this installation.
+  <p>관리자에게는 관리를 위한 링크들이 현재 페이지의 끝에 생성됩니다.
+  이 링크들은 어느 페이지에서나 존재할 것입니다. 이들 링크 중에는, 적어도 한번은 반드시
+  방문해야하는 <a href="editparams.cgi">매개변수</a> 페이지도 있습니다.
+  이 페이지에서 설치를 위한 모든 중요한 매개변수들을 설정할 수 있습니다.
   By clicking this link, you will be able to set among others:</p>
 
   <ul>
-    <li><a href="editparams.cgi?section=core#maintainer">maintainer</a>, the person
-    responsible for this installation if something is running wrong.</li>
+    <li><a href="editparams.cgi?section=core#maintainer">maintainer</a>는 설치가
+    의 잘못되었을 때 책임이 갖는 사람입니다.</li>
 
-    <li><a href="editparams.cgi?section=core#urlbase">urlbase</a>, which is the URL
-    pointing to this installation and which will be used in emails (which is also the
-    reason you see this page: as long as this parameter is not set, you will see this
-    page again and again).</li>
+    <li><a href="editparams.cgi?section=core#urlbase">urlbase</a>는 설치 페이지로
+    연결되는 URL입니다. 또한 이메일에 사용될 수도 있습니다. (이것은 또한 당신이 이 페이지를
+    보게되는 이유이기도 합니다: 이 매개변수가 설정되지 않으면, 계속 이 페이지를 보게 될
+    것입니다)</li>
 
-    <li><a href="editparams.cgi?section=core#cookiepath">cookiepath</a> is important
-    for your browser to manage your cookies correctly.</li>
+    <li><a href="editparams.cgi?section=core#cookiepath">cookiepath</a>는
+    당신의 브라우저가 쿠키를 제대로 관리하기 위해 중요합니다.</li>
 
-    <li><a href="editparams.cgi?section=core#utf8">utf8</a> will let you encode all
-    texts into UTF-8, if desired (it is strongly recommended to keep this parameter
-    turned on).</li>
+    <li><a href="editparams.cgi?section=core#utf8">utf8</a>은 원하는 모든 텍스트를
+    UTF-8로 인코딩할 수 있도록 합니다.(이 매개변수를 켜는 것을 강력히 권함)</li>
   </ul>
 
-  <p>Also important are the following parameters:</p>
+  <p>또한 다음 매개변수들이 매우 중요합니다:</p>
 
   <ul>
     <li><a href="editparams.cgi?section=auth#requirelogin">requirelogin</a>, if turned
