--- a/trunk/bugzilla/template/ko/default/list/list.html.tmpl
+++ b/trunk/bugzilla/template/ko/default/list/list.html.tmpl
@@ -81,8 +81,8 @@
 
 [% IF toolong %]
   <h2 class="bz_smallminded">
-    This list is too long for [% terms.Bugzilla %]'s little mind; the
-    Next/Prev/First/Last buttons won't appear on individual [% terms.bugs %].
+    [% terms.Bugzilla %] 에게 이 리스트는 너무 깁니다.
+    각각의 [% terms.bugs %] 에서 Next/Prev/First/Last 버튼이 보이지 않을 것입니다.
   </h2>
 [% END %]
 
@@ -188,13 +188,13 @@
         [% IF bugs.size > 1 && caneditbugs && !dotweak %]
           <a href="buglist.cgi?[% urlquerypart FILTER html %]
             [%- "&order=$qorder" FILTER html IF order %]&amp;tweak=1"
-            >Change&nbsp;Several&nbsp;[% terms.Bugs %]&nbsp;at&nbsp;Once</a>
+            >한&nbsp;번에&nbsp;여러&nbsp;개의&nbsp;[% terms.Bugs %]&nbsp;을/를&nbsp;바꾸기</a>
           |
         [% END %]
 
         [% IF bugowners %]
           <a href="mailto:
-            [% bugowners FILTER html %]">Send&nbsp;Mail&nbsp;to&nbsp;[% terms.Bug %]&nbsp;Assignees</a> |
+            [% bugowners FILTER html %]">[% terms.Bug %] 을/를&nbsp;할당받은&nbsp;사람에게&nbsp;메일&nbsp;보내기</a> |
         [% END %]
 
         [%# Links to more things users can do with this bug list. %]
@@ -207,28 +207,27 @@
       <a href="query.cgi?[% urlquerypart FILTER html %]
       [% IF editqueryname != '' %]&amp;known_name=
         [% editqueryname FILTER url_quote %]
-      [% END %]">Edit&nbsp;Search</a>
+      [% END %]">검색&nbsp;수정</a>
     </td>
       
     [% IF searchtype == "saved" %]
       <td valign="middle" nowrap="nowrap" class="bz_query_forget">
         |
         <a href="buglist.cgi?cmdtype=dorem&amp;remaction=forget&amp;namedcmd=
-                [% searchname FILTER url_quote %]">Forget&nbsp;Search&nbsp;'
-                [% searchname FILTER html %]'</a>
+                [% searchname FILTER url_quote %]">'[% searchname FILTER html %]' 의 검색 잊기</a>
       </td>
     [% ELSE %]
       <td>&nbsp;</td>
       
       <td valign="middle" class="bz_query_remember">
         <form method="get" action="buglist.cgi">
-          <input type="submit" id="remember" value="Remember search"> as 
           <input type="hidden" name="newquery" 
                  value="[% urlquerypart FILTER html %][% "&order=$qorder" FILTER html IF order %]">
           <input type="hidden" name="cmdtype" value="doit">
           <input type="hidden" name="remtype" value="asnamed">
           <input type="text" id="save_newqueryname" name="newqueryname" size="20"
                  value="[% defaultsavename FILTER html %]"> 
+          로 <input type="submit" id="remember" value="검색 저장">
         </form> 
       </td>
     [% END %]  
@@ -237,8 +236,7 @@
 
 [% IF cgi.param('product').size == 1 && cgi.param('product') != "" %]
   <p class="bz_query_single_product">
-    <a href="enter_bug.cgi?product=[% cgi.param('product') FILTER url_quote %]">File
-      a new [% terms.bug %] in the "[% cgi.param('product') FILTER html %]" product</a>
+    <a href="enter_bug.cgi?product=[% cgi.param('product') FILTER url_quote %]">"[% cgi.param('product') FILTER html %]" 제품의 새로운 [% terms.bug %] 추가</a>
   </p>
 [% END %]
 
