[1차] 전체 번역 완료.

--- a/bugzilla/template/ko/default/welcome-admin.html.tmpl
+++ b/bugzilla/template/ko/default/welcome-admin.html.tmpl
@@ -58,10 +58,9 @@
   <p>또한 다음 매개변수들이 매우 중요합니다:</p>
 
   <ul>
-    <li><a href="editparams.cgi?section=auth#requirelogin">requirelogin</a>는 , if turned
-    on, will protect your installation from users having no account on this installation.
-    In other words, users who are not explicitly authenticated with a valid account
-    cannot see any data. This is what you want if you want to keep your data private.</li>
+    <li><a href="editparams.cgi?section=auth#requirelogin">requirelogin</a>을 켜면,
+    이 설치에 계정이 없는 사용자로 부터 당신의 설치를 보호합니다. 즉 유효하는 계정으로 명확히 중명되지 않는 사용자는
+    어떠한 자료도 볼 수 없게 됩니다. 당신의 자료를 비공개로 유지하고 싶으면 이 옵션을 켜십시오.</li>
 
     <li><a href="editparams.cgi?section=auth#createemailregexp">createemailregexp</a>
     는 이 설치에서 계정을 만들 수 있는 사용자를 정의할 수 있습니다. 값을 ".*" (기본값) 으로 설정하면 누구든 자신의 계정을
