[1차] 전체 번역 완료. (수정)

--- a/bugzilla/template/ko/default/account/create.html.tmpl
+++ b/bugzilla/template/ko/default/account/create.html.tmpl
@@ -52,7 +52,7 @@
 [% IF Param('createemailregexp') == '.*' && Param('emailsuffix') == '' %]
 <p>
   <b>프라이버시 공지:</b> [% terms.Bugzilla %] 은 오픈 [% terms.bug %]
-  트래킹 시스템입니다. 이메일 주소를 포함하여 [% terms.bugs %] 에서 하는 활동들은 공개적으로
+  트래킹 시스템입니다. 이메일 주소를 포함하여 [% terms.bugs %] 에서 하는 대부분의 활동들은 공개적으로
   노출됩니다. 따라서 저희는 부가적인 계정이나 무료 이메일 서비스 (Gmail, Yahoo, Hotmail 등)를
   사용하여 당신의 주요한 이메일 주소에 스팸이 날라오는 것을 막을 수 있도록 하기를 <b>권장합니다</b>.
 </p>
