을/를 조사 제거

--- a/bugzilla/template/ko/default/list/edit-multiple.html.tmpl
+++ b/bugzilla/template/ko/default/list/edit-multiple.html.tmpl
@@ -275,8 +275,8 @@
   <table border="1">
     <tr>
       <th>해당 그룹의<br>제한 조건을<br>변경하지<br>마세요</th>
-      <th>해당 그룹에서<br>[% terms.bugs %] 을/를<br>지우기</th>
-      <th>해당 그룹에<br>[% terms.bugs %] 을/를<br>더하기</th>
+      <th>해당 그룹의<br>[% terms.bugs %]<br>지우기</th>
+      <th>해당 그룹에<br>[% terms.bugs %]<br>더하기</th>
       <th>그룹 이름:</th>
     </tr>
 
